<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:checkableBehavior="single">

    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:id="@+id/Rhome"
        >
    </item>

<item
android:title="@string/my_profile"
    android:icon="@drawable/ic_profile"
android:id="@+id/profile"
    >
</item>

    <item
        android:title="@string/favourite_restaurants"
        android:icon="@drawable/ic_fav"
        android:id="@+id/fav"
        >
    </item>

    <item
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"
        android:id="@+id/history"
        >
    </item>

    <item
         android:title="@string/faqs"
         android:icon="@drawable/ic_faq"
        android:id="@+id/faq">

    </item>

    <item
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"
        android:id="@+id/logout">

</item>

</group>

</menu>