<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgFLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        />


    <TextView
        android:id="@+id/txtInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_the_registered_mobile_and_email_below"
    android:textSize="20sp"
        android:layout_margin="30dp"
        android:layout_below="@id/imgFLogo"
        android:textColor="#ffffff"
    />

    <EditText
        android:id="@+id/etFMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/mobile_number_10digits"
        android:textSize="20sp"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_below="@id/txtInfo"
        android:background="#ffffff"
        android:padding="6dp"
        />

    <EditText
        android:padding="6dp"
        android:id="@+id/etFEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_below="@id/etFMobile"
        android:background="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/next"
        android:background="@color/BtnColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnFNext"
        android:layout_below="@id/etFEmailAddress"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>