<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordDetails"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter the recieved OTP below"
        android:textSize="20sp"
        android:layout_margin="30dp"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/otp_4characters"
        android:textSize="20sp"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:maxLength="4"
        android:background="#ffffff"
        android:padding="6dp"
        />

    <EditText
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_min_6_characters"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etPpassword"
        />
    <EditText
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etcpPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/next"
        android:background="@color/BtnColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnpNext"
        />

</LinearLayout>